# badlog

./: Cargo.toml  README.md
examples/: simple.rs
src/: lib.rs
