[package]
name = "badlog"
version = "0.2.4"
description = "A simple, zero customization, colored logger."
keywords = ["simple", "log", "logging", "logger", "color"]
license = "MIT"
repository = "https://github.com/quadrupleslap/badlog"
authors = ["Ram Kaniyur <quadrupleslap@gmail.com>"]

[dependencies]
ansi_term = "0.9"
env_logger = "0.4.0"
libc = "0.2"
log = "0.3"
time = "0.1"
